# university-semester-scheduler

./: .gitignore  TODO.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  optimize.py  pyproject.toml  seed_data.py  test_runner.py
backend/app/: db.py  main.py  models.py
backend/app/api/: classrooms.py  courses.py  lessons.py  projects.py  solver.py  student_groups.py  teachers.py  terms.py  timeslots.py  upload.py
backend/app/services/: parser.py  preprocessor.py
backend/app/solver/: constraints.py  engine.py  fitness.py  genome.py  operators.py
backend/migrations/: env.py
backend/migrations/versions/: 1271601eeb5a_make_lesson_teacher_optional_and_add_.py  1482cf11f222_add_project_model_and_link_to_lesson.py  2e6c50b0cecd_add_available_slots_to_teacher.py  4739583bb5f8_add_project_relational_tables.py  6cbadda81053_update_models_remove_accessibility_.py  7b185b8ab327_add_name_and_description_to_project.py  9fd12cb1effa_refactor_teacher_availability.py  a08115cd57b6_add_solver_run_model.py  a1b2c3d4e5f6_remove_name_from_project.py  ab427cdeef3d_add_timestamps_to_models.py  c1b07cdca296_add_timestamps_to_project.py  f1e2d3c4b5a6_add_project_id_to_teacher_availability.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.js.bak
frontend/src/components/: CourseSelector.svelte  DaySelector.svelte  EditableTable.svelte  FileUpload.svelte  ScheduleGrid.svelte  TimeSlotModal.svelte  TimeSlotSelector.svelte
frontend/src/lib/: api.ts  utils.ts
frontend/src/routes/: +layout.svelte  +page.svelte
(+2 files in other folders)
