[tool.poetry]
name = "university-semester-scheduler-backend"
version = "0.1.0"
description = "Backend for University Semester Scheduler"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }
sqlmodel = "^0.0.14"
pydantic = "^2.6.0"
asyncpg = "^0.29.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
openpyxl = "^3.1.2"
python-multipart = "^0.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
